Fix: Donation and trooper info at top spacing is too much on larger monitors

--- a/css/main.css
+++ b/css/main.css
@@ -942,11 +942,14 @@ blockquote {
 }
 
 .dashboard-row {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	gap: 20px;
-	margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 10px;
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .dashboard-row.single-item {
